# discore

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
discore/: __init__.py  bot.py  cog.py  command_tree.py  default_config.toml  default_config.yml  help.py  log.py  tree.py  ui.py  utils.py
discore/locales/: en-US.yml  fr.yml
discore/ui/: __init__.py  button.py  dynamic.py  item.py  modal.py  select.py  text_input.py  view.py
docs/: conf.py  index.md
docs/_autosummary/: discore.cog.rst  discore.rst  discore.utils.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/_autosummary/: discore.bot.doctree  discore.cog.doctree  discore.doctree  discore.help.doctree  discore.log.doctree  discore.utils.doctree
docs/_build/.doctrees/autoapi/: index.doctree
docs/_build/_autosummary/: discore.bot.html  discore.cog.html  discore.help.html  discore.html  discore.log.html  discore.utils.html
docs/_build/_sources/: index.rst.txt
docs/_build/_sources/_autosummary/: discore.bot.rst.txt  discore.log.rst.txt  discore.rst.txt
docs/_build/_sources/autoapi/: index.rst.txt
docs/_build/_static/: documentation_options.js
docs/_build/autoapi/: index.html
docs/_build/autoapi/discore/: index.html
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/_autosummary/: discore.bot.doctree  discore.cog.doctree  discore.doctree  discore.help.doctree  discore.log.doctree  discore.utils.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_autosummary/: discore.bot.html  discore.cog.html  discore.help.html  discore.html  discore.log.html  discore.utils.html
(+39 files in other folders)
