[metadata]
name = discore
version = 0.6
author = Kyrela
description = A core for initialise, run and tracks errors of discord.py bots
long_description = file: README.md
long_description_content_type = text/markdown
keywords = discore, discord, core, bot, log, error, help, setup, config, run, track
licence = MIT
url = https://github.com/kyrela/discore
download_url = https://github.com/Kyrela/discore/releases/latest
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    discord.py==2.5.0
    yamlenv~=0.7.1
    addict~=2.4.0
    mergedeep~=1.3.4
    python-dotenv~=1.0.1
    python-i18n[YAML]~=0.3.9
